Voeg een MOR model toe
MOR is vrij specifiek, voor de integratietesten/demo's is het dus wel
fijn om deze concreet wat uit te modelleren.

Ref. VNG-Realisatie/gemma-zaken#182
