# src/openapi.yaml
@@ -10,7 +10,93 @@ info:
 security:
   - basic: []
 paths:
-  /verblijfsobjecten:
+  /mor:
+    get:
+      operationId: meldingopenbareruimte_list
+      description: ''
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/MeldingOpenbareRuimte'
+      tags:
+        - mor
+    post:
+      operationId: meldingopenbareruimte_create
+      description: ''
+      responses:
+        '201':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MeldingOpenbareRuimte'
+      tags:
+        - mor
+      requestBody:
+        $ref: '#/components/requestBodies/MeldingOpenbareRuimte'
+    parameters: []
+  '/mor/{uuid}':
+    get:
+      operationId: meldingopenbareruimte_read
+      description: ''
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MeldingOpenbareRuimte'
+      tags:
+        - mor
+    put:
+      operationId: meldingopenbareruimte_update
+      description: ''
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MeldingOpenbareRuimte'
+      tags:
+        - mor
+      requestBody:
+        $ref: '#/components/requestBodies/MeldingOpenbareRuimte'
+    patch:
+      operationId: meldingopenbareruimte_partial_update
+      description: ''
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MeldingOpenbareRuimte'
+      tags:
+        - mor
+      requestBody:
+        $ref: '#/components/requestBodies/MeldingOpenbareRuimte'
+    delete:
+      operationId: meldingopenbareruimte_delete
+      description: ''
+      responses:
+        '204':
+          description: ''
+      tags:
+        - mor
+    parameters:
+      - name: uuid
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+  /rsgb/verblijfsobjecten:
     get:
       operationId: verblijfsobject_list
       description: ''
@@ -24,7 +110,7 @@ paths:
                 items:
                   $ref: '#/components/schemas/VerblijfsObject'
       tags:
-        - verblijfsobjecten
+        - rsgb
     post:
       operationId: verblijfsobject_create
       description: ''
@@ -36,11 +122,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/VerblijfsObject'
       tags:
-        - verblijfsobjecten
+        - rsgb
       requestBody:
         $ref: '#/components/requestBodies/VerblijfsObject'
     parameters: []
-  '/verblijfsobjecten/{id}':
+  '/rsgb/verblijfsobjecten/{id}':
     get:
       operationId: verblijfsobject_read
       description: ''
@@ -52,7 +138,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/VerblijfsObject'
       tags:
-        - verblijfsobjecten
+        - rsgb
     put:
       operationId: verblijfsobject_update
       description: ''
@@ -64,7 +150,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/VerblijfsObject'
       tags:
-        - verblijfsobjecten
+        - rsgb
       requestBody:
         $ref: '#/components/requestBodies/VerblijfsObject'
     patch:
@@ -78,7 +164,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/VerblijfsObject'
       tags:
-        - verblijfsobjecten
+        - rsgb
       requestBody:
         $ref: '#/components/requestBodies/VerblijfsObject'
     delete:
@@ -88,7 +174,7 @@ paths:
         '204':
           description: ''
       tags:
-        - verblijfsobjecten
+        - rsgb
     parameters:
       - name: id
         in: path
@@ -97,7 +183,7 @@ paths:
         schema:
           type: integer
 servers:
-  - url: /api/v1/rsgb
+  - url: /api/v1
 components:
   requestBodies:
     VerblijfsObject:
@@ -106,11 +192,45 @@ components:
           schema:
             $ref: '#/components/schemas/VerblijfsObject'
       required: true
+    MeldingOpenbareRuimte:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/MeldingOpenbareRuimte'
+      required: true
   securitySchemes:
     basic:
       type: http
       scheme: basic
   schemas:
+    MeldingOpenbareRuimte:
+      required:
+        - hoofdcategorie
+        - subcategorie
+      type: object
+      properties:
+        url:
+          title: Url
+          type: string
+          format: uri
+          readOnly: true
+        hoofdcategorie:
+          title: Hoofdcategorie
+          type: string
+          maxLength: 255
+          minLength: 1
+        subcategorie:
+          title: Subcategorie
+          type: string
+          maxLength: 255
+          minLength: 1
+        locatieBeschrijving:
+          title: Locatie beschrijving
+          description: Aanvullende omschrijving locatie
+          type: string
+        data:
+          title: Data
+          type: string
     Adres:
       title: Hoofdadres
       required:
